# hermes-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  bench_report.html
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
crates/client/: Cargo.toml  README.md
crates/client/benches/: grpc_benchmarks.rs
crates/client/examples/: fanout_benchmark.rs  queue_group.rs  repl.rs  simple_pubsub.rs  smoke_test.rs
crates/client/src/: client.rs  durable_subscriber.rs  error.rs  lib.rs  publisher.rs  subscriber.rs
crates/core/: Cargo.toml  README.md
crates/core/benches/: throughput.rs
crates/core/examples/: fanout_quick.rs
crates/core/src/: error.rs  event.rs  group.rs  lib.rs  router.rs  slot.rs  subject.rs  trie.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/benches/: grpc_benchmarks.rs
crates/integration-tests/examples/: fanout_benchmark.rs  repl.rs  smoke_test.rs
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: server_integration.rs
crates/macros/: Cargo.toml
crates/macros/src/: event.rs  group.rs  lib.rs
crates/proto/: Cargo.toml  README.md  build.rs
crates/proto/proto/hermes/broker/v1/: broker.proto
crates/proto/src/: lib.rs
crates/server/: Cargo.toml  README.md
crates/server/benches/: engine_benchmarks.rs  grpc_e2e.rs
crates/server/src/: broker.rs  cli.rs  config.rs  delivery_rx.rs  grpc.rs  lib.rs  main.rs  redelivery.rs  shutdown.rs  subscription.rs  tls.rs
crates/server/tests/: integration.rs
crates/store/: Cargo.toml
crates/store/src/: error.rs  lib.rs  redb_store.rs
hermes-bruno/: opencollection.yml
hermes-bruno/v1/: Publish.yml  PublishD.yml  Subscribe copy.yml  Subscribe.yml  SubscribeD.yml  folder.yml
hooks/: install.sh  pre-push
proto/scylla/broker/v1/: broker.proto
scripts/: gen-certs.sh
scylla-broker-bruno/: opencollection.yml
scylla-broker-bruno/environments/: local.yml
scylla-broker-bruno/v1/: Publish.yml  Subscribe copy.yml  Subscribe.yml
