[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.5.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodlyJaaaj/hermes-rs"
keywords = ["messaging", "broker", "grpc", "pubsub", "events"]
categories = ["network-programming", "asynchronous"]

[workspace.dependencies]
# ── Internal crates (path-only, aliases keep imports short) ──
hermes-proto  = { package = "hermes-broker-proto",   path = "crates/proto" }
hermes-broker = { package = "hermes-broker-core",    path = "crates/core" }
hermes-client = { package = "hermes-broker-client",  path = "crates/client" }
hermes-server = { package = "hermes-broker-server",  path = "crates/server" }

# ── gRPC / protobuf ──
tonic              = "0.14"
tonic-build        = "0.14"
tonic-prost        = "0.14"
tonic-prost-build  = "0.14"
tonic-reflection   = "0.14"
prost              = "0.14"

# ── Async runtime ──
tokio        = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# ── Data structures ──
bytes    = "1"
smallvec = "2.0.0-alpha.12"

# ── Error handling ──
thiserror = "2"

# ── Bench / test ──
criterion = { version = "0.8", features = ["async_tokio"] }
