[package]
name = "hermes-broker-client"
version.workspace = true
edition.workspace = true
description = "Typed async client for the Hermes gRPC event broker."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodlyJaaaj/hermes-rs"
homepage = "https://github.com/GodlyJaaaj/hermes-rs"
documentation = "https://docs.rs/hermes-broker-client"
readme = "README.md"
keywords = ["messaging", "broker", "grpc", "event", "pubsub"]
categories = ["network-programming", "asynchronous"]

[dependencies]
hermes-core = { workspace = true }
hermes-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[lib]
name = "hermes_client"

