[package]
name = "hermes-broker-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
smallvec.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false
