[package]
name = "hermes-broker-core"
description = "Core routing engine for the Hermes message broker — trie-based subject matching, fanout and queue groups"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
bytes.workspace = true
smallvec.workspace = true
tracing.workspace = true
kanal.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio.workspace = true
bytes.workspace = true

[[bench]]
name = "throughput"
harness = false
