[package]
name = "hermes-integration-tests"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
hermes-client = { workspace = true }
hermes-server = { workspace = true }
hermes-core = { workspace = true }
hermes-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
criterion = { workspace = true }
ratatui = "0.30"
crossterm = "0.29"

[[bench]]
name = "grpc_benchmarks"
harness = false
