[package]
name = "hermes-broker-macros"
version.workspace = true
edition.workspace = true
description = "Procedural macros for Hermes event ergonomics."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodlyJaaaj/hermes-rs"
homepage = "https://github.com/GodlyJaaaj/hermes-rs"
documentation = "https://docs.rs/hermes-broker-macros"
readme = "../../README.md"
keywords = ["messaging", "broker", "grpc", "macros", "events"]
categories = ["network-programming", "asynchronous"]

[lib]
proc-macro = true
name = "hermes_macros"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
