[package]
name = "hermes-broker-proto"
description = "Protobuf and gRPC service definitions for the Hermes message broker"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
