[package]
name = "hermes-broker-server"
version.workspace = true
edition.workspace = true
description = "Hermes gRPC broker server with fanout, queue groups, and durable delivery."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodlyJaaaj/hermes-rs"
homepage = "https://github.com/GodlyJaaaj/hermes-rs"
documentation = "https://docs.rs/hermes-broker-server"
readme = "README.md"
keywords = ["messaging", "broker", "grpc", "pubsub", "queue"]
categories = ["network-programming", "asynchronous"]

[dependencies]
hermes-core = { workspace = true }
hermes-proto = { workspace = true }
hermes-store = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
futures = { workspace = true }
serde = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "engine_benchmarks"
harness = false

[lib]
name = "hermes_server"

