[package]
name = "hermes-broker-server"
description = "gRPC server for the Hermes message broker"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hermes-proto.workspace = true
hermes-broker.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kanal.workspace = true
clap.workspace = true

[dev-dependencies]
hermes-client.workspace = true
tracing-subscriber.workspace = true
criterion.workspace = true
bytes.workspace = true

[[bench]]
name = "grpc_e2e"
harness = false
