[package]
name = "hermes-broker-store"
version.workspace = true
edition.workspace = true
description = "Durable message storage backend for Hermes using redb."
license = "MIT OR Apache-2.0"
repository = "https://github.com/GodlyJaaaj/hermes-rs"
homepage = "https://github.com/GodlyJaaaj/hermes-rs"
documentation = "https://docs.rs/hermes-broker-store"
readme = "../../README.md"
keywords = ["messaging", "broker", "storage", "durable", "redb"]
categories = ["database", "asynchronous"]

[dependencies]
hermes-proto = { package = "hermes-broker-proto", path = "../proto", version = "0.2.0" }
redb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lib]
name = "hermes_store"

